--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
     overflow: hidden;
 }
 
-#main-img {
+.main-img {
     height: 100vh;
     width: 100vw;
 }
@@ -11,6 +11,45 @@ body {
 .button {
     position: absolute;
     z-index: 5;
-    top: 0;
+    top: 3rem;
     right: 0;
+}
+
+.navigation {
+    position: absolute;
+    padding: 10px;
+}
+
+.navigation-item {
+    float: right;
+    margin-left: 10px;
+}
+
+body {
+    color: white;
+}
+
+#section1 {
+    display: flex;
+    justify-content: center;
+    background-color: black;
+    background-image: url('./background.png') !important;
+    background-position: bottom;
+    background-size: contain;
+    background-repeat: no-repeat;
+}
+
+.member-wrapper {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-gap: 40px;
+    grid-auto-rows: minmax(100px, auto);
+}
+
+.member {
+    width: 15rem;
+    transition: 0.5s;
+}
+.member:hover {
+    transform:scale(1.5);
 }
