--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -96,18 +96,22 @@ body {
   height: 5rem;
   width: auto;
   display: inline-block;
+  margin-top: 5px;
+  margin-left: 10px;
 }
 
 .title {
-  padding: 30px 0 0 30px;
+  padding: 60px 0 0 30px;
   display: flex;
   align-items: center;
 }
 
 .contact-1 {
   position: absolute;
-  left: 30px;
+  left: 50px;
   bottom: 150px;
+  font-size: 60px;
+  line-height: 90px;
 }
 
 .contact-2 {
@@ -115,6 +119,7 @@ body {
   right: 30px;
   bottom: 90px;
   float: right;
+  font-size: 20px;
 }
 
 a {
