--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -53,17 +53,18 @@ body {
 }
 
 .member-wrapper {
-  margin-top: 70px;
+  margin-top: 60px;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   grid-gap: 40px;
   grid-auto-rows: minmax(100px, auto);
-  color: white;
+  color: white; 
 }
 
 .member {
-  width: 15rem;
+  width: 12rem;
   transition: 0.5s;
+  z-index: 0;
 }
 
 .category-wrapper {
@@ -82,7 +83,9 @@ body {
 }
 
 .member:hover {
-  transform: scale(2);
+  z-index: 1;
+  transform: scale(3);
+  position: relative;
 }
 
 #section3 {
