신규 멤버 오동혁 한은혜, 신규 디자이너 김경범

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -37,6 +37,7 @@ body {
 
 .navigation-item {
   margin-left: 10px;
+  cursor: pointer;
 }
 
 #section1 {
@@ -55,7 +56,7 @@ body {
 .member-wrapper {
   margin-top: 60px;
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
+  grid-template-columns: repeat(5, 1fr);
   grid-gap: 40px;
   grid-auto-rows: minmax(100px, auto);
   color: white; 
